--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,4 +1,16 @@
-<div *ngFor="let quote of quotes">
-
-<p>{{quote.content}}</p>
+<div class="container">
+  <div class="row">
+  <div *ngFor="let quote of quotes" class="col-6">
+    <div class="card h-100">
+      <div class="card-title"></div>
+      <div class="card-body">
+        <p>{{ quote.content }}</p>
+      </div>
+      <div class="card-footer">
+        <p>{{quote.upvote}}</p>
+        <p class="text-end">By {{quote.author}}</p>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
