--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,6 +1,6 @@
 <div class="card-footer">
   <fa-icon [icon]="faCaretUp" size="3x" [styles]="{'color':'green'}" (click)="like()" ></fa-icon><span>{{quote.upVote}} Upvotes</span>
-  <fa-icon  [icon]="faCaretDown" size="3x" [styles]="{'color':'red'}"></fa-icon><span>{{quote.downVote}} Downvotes</span>
+  <fa-icon  [icon]="faCaretDown" size="3x" [styles]="{'color':'red'}" (click)="dislike()"></fa-icon><span>{{quote.downVote}} Downvotes</span>
 
   
   <p class="text-end">By {{quote.author}}</p>
