--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -18,6 +18,6 @@
       </div>
     </div>
   </div>
-  <app-quote-form></app-quote-form>
+  <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
 </div>
 
