--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -2,11 +2,15 @@
 
 
   <div class="row">
-    <div class="col-6">
-      <div><img src="../../assets/hero.jpg" class="img-fluid mx-2" alt=""></div>
+    <div class="col-lg-6">
+      <div><img src="../../assets/hero.jpg" class="img-fluid mx-lg-2" alt=""></div>
     </div>
-    <div class="col-6 d-flex align-items-center justify-content-center">
-    <div class="description">Post a Quote today to Make someones day.</div>
+    <div class="col-lg-6 d-flex align-items-center justify-content-center">
+    <div class="description">
+      <h1>Welcome to Inspirational Quotes</h1>
+      <p>View posts from famous people that are timeless.<br> <br> Share a Quote today to make someone's day.</p> 
+      <a href="#submitQuote" class="btn btn-success">Submit Quote</a>
+    </div>
 
 
     </div>
@@ -41,6 +45,6 @@
   <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
 </div>
 
-<footer class="text-center">
+<footer class="text-center bg-secondary mt-5">
   &copy; 2022 Francis Githae
 </footer>
