--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="col-lg-6">
-      <div><img src="/src/assets/hero.jpg" class="img-fluid mx-lg-2" alt=""></div>
+      <div><img src="./assets/hero.jpg" class="img-fluid mx-lg-2" alt=""></div>
     </div>
     <div class="col-lg-6 d-flex align-items-center justify-content-center">
     <div class="description">
