--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -24,7 +24,7 @@
   <div class="row">
     <div *ngFor="let quote of quotes; let i = index" class="col-lg-6 my-2">
       <div class="card h-100">
-        <div class="card-title">Posted by {{quote.submittedBy.firstName}} {{quote.submittedBy.lastName}} {{quote.createdOn | timeElapsed}}</div>
+        <div class="card-title">Posted by <span class="badge bg-secondary">{{quote.submittedBy.firstName}} {{quote.submittedBy.lastName}} </span> {{quote.createdOn | timeElapsed}}</div>
         <div
           class="card-body"
           [attr.id]="quote.id"
