--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -38,6 +38,7 @@
           [quote]="quote"
           (upVote)="upVoteQuote(i)"
           (downVote)="downVoteQuote(i)"
+          (deleteQuote)="deleteQuote(i)"
         ></app-quote-detail>
       </div>
     </div>
