--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,8 +1,8 @@
 <div class="card-footer">
   <p class="text-end">By {{quote.author}}</p>
-  <fa-icon [icon]="faCaretUp" size="3x" [styles]="{'color':'green'}" (click)="like()" ></fa-icon><span>{{quote.upVote}} Upvotes</span>
-  <fa-icon  [icon]="faCaretDown" size="3x" [styles]="{'color':'red'}" (click)="dislike()"></fa-icon><span>{{quote.downVote}} Downvotes</span>
-  <fa-icon  [icon]="faTrashAlt" size="1x" [styles]="{'color':'red'}" (click)="delete()" class="float-end"></fa-icon>
+  <fa-icon [icon]="faCaretUp" size="3x" [styles]="{'color':'green'}" (click)="like()" class="button mx-2"></fa-icon><span>{{quote.upVote}} Upvotes</span>
+  <fa-icon  [icon]="faCaretDown" size="3x" [styles]="{'color':'red'}" (click)="dislike()" class="button mx-2"></fa-icon><span>{{quote.downVote}} Downvotes</span>
+  <fa-icon  [icon]="faTrashAlt" size="1x" [styles]="{'color':'red'}" (click)="delete()" class="float-end button"></fa-icon>
 
   
   
