--- a/src/styles.css
+++ b/src/styles.css
@@ -8,8 +8,20 @@ html{
 .highlighted{
   background:blue;
   color:white;
+  z-index:3;
+  animation: flicker 0.3s;
+  animation-iteration-count: 1;
+  font-weight: bold;
 }
 
 .button:hover{
 cursor: pointer;
+}
+
+@keyframes flicker {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+ 
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
