--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
-
+*{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+  font-weight: 600px;
+  
+}
 html{
   width:100vw;
   overflow-x: hidden;
 }
+
+.card{
+  font-size: 18px;
+}
 .highlighted{
-  background:blue;
-  color:white;
+  background:rgb(159, 159, 204);
+  color: white !important;;
   z-index:3;
   animation: flicker 0.3s;
   animation-iteration-count: 1;
@@ -18,6 +27,9 @@ html{
 cursor: pointer;
 }
 
+.votes{
+  user-select: none;
+}
 @keyframes flicker {
   0% { transform: translate(1px, 1px) rotate(0deg); }
   
