--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,7 +1,7 @@
-<header class="container-fluid d-flex justify-content-evenly align-items-center">
+<header class="container-fluid d-flex justify-content-evenly align-items-center mb-3">
 
 
-  <div class="row">
+  <div class="row mb-3">
     <div class="col-lg-6">
       <div><img src="./assets/hero.jpg" class="img-fluid mx-lg-2" alt=""></div>
     </div>
