--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -23,7 +23,7 @@
   <h1 class="text-center">Quotes</h1>
   <div class="row">
     <div *ngFor="let quote of quotes; let i = index" class="col-lg-6 my-2">
-      <div class="card h-100"
+      <div class="card h-100 rounded-5"
       [attr.id]="quote.id"
           appHighlight
           [appHighlight]="mostVotedQuote"
