--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,3 +1,4 @@
+<div class="quote-form container rounded-3 ">
 <h1 class="text-center mt-5">Submit Quote</h1>
 <form [formGroup]="quoteForm" (ngSubmit)="submitQuote()">
   <div class="row mb-3 gy-2">
@@ -5,7 +6,7 @@
       <input
         formControlName="firstName"
         type="text"
-        class="form-control"
+        class="form-control rounded-pill"
         id="firstName"
         name="firstName"
         placeholder="First name"
@@ -27,7 +28,7 @@
       <input
         formControlName="lastName"
         type="text"
-        class="form-control"
+        class="form-control rounded-pill"
         id="lastName"
         name="lastName"
         placeholder="Last name"
@@ -51,7 +52,7 @@
     <div class="col-lg-6 form-group">
       <textarea
         formControlName="quote"
-        class="form-control"
+        class="form-control rounded-3"
         id="quote"
         placeholder="quote"
         rows="3"
@@ -73,7 +74,7 @@
       <input
         formControlName="author"
         type="text"
-        class="form-control"
+        class="form-control rounded-pill"
         placeholder="Author"
         aria-label="First name"
         id="author"
@@ -93,9 +94,10 @@
     </div>
   </div>
 
-  <div class="d-flex justify-content-center">
-    <button type="submit" id="submitQuote" class="btn btn-success">
+  <div class="d-flex justify-content-center ">
+    <button type="submit" id="submitQuote" class="btn btn-success mb-3">
       Submit Quote
     </button>
   </div>
 </form>
+</div>
