--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -29,12 +29,12 @@
           [appHighlight]="mostVotedQuote"
           [index]="i"
       >
-        <div class="card-title">Posted by <span class="badge bg-secondary">{{quote.submittedBy.firstName}} {{quote.submittedBy.lastName}} </span> {{quote.createdOn | timeElapsed}}</div>
+        <div class="card-title p-3">Posted by <span class="badge bg-secondary">{{quote.submittedBy.firstName}} {{quote.submittedBy.lastName}} </span> {{quote.createdOn | timeElapsed}}</div>
         <div
-          class="card-body"
+          class="card-body p-3"
           
         >
-          <p>{{ quote.content }}</p>
+          <p class="p-3">{{ quote.content }}</p>
         </div>
         <app-quote-detail
           [quote]="quote"
